chore: single quotes

--- a/web/resources/styles/index.scss
+++ b/web/resources/styles/index.scss
@@ -1,10 +1,10 @@
-@import "bourbon";
-@import "neat";
-@import "../../../node_modules/ng-dialog/css/ngDialog";
-@import "../../../node_modules/ng-dialog/css/ngDialog-theme-default";
-@import "reset";
-@import "variables";
-@import "common";
-@import "components/header";
-@import "components/standard.chart";
-@import "pages/index";
+@import 'bourbon';
+@import 'neat';
+@import '../../../node_modules/ng-dialog/css/ngDialog';
+@import '../../../node_modules/ng-dialog/css/ngDialog-theme-default';
+@import 'reset';
+@import 'variables';
+@import 'common';
+@import 'components/header';
+@import 'components/standard.chart';
+@import 'pages/index';
